get word array using genius api

--- a/get_lyrics.ipynb
+++ b/get_lyrics.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spot = sp.Spotify(client_credentials_manager=sp.oauth2.SpotifyClientCredentials(client_id='c607893d1e2f45c3aa20e15860e1237a', client_secret='1fffbb7123344c86a32f68c14ed7ed02'))"
+    "spot = sp.Spotify(client_credentials_manager=sp.oauth2.SpotifyClientCredentials(client_id='', client_secret=''))"
    ]
   },
   {
